--- a/geogebra_applet/templates/geogebra_applet/main_str.html
+++ b/geogebra_applet/templates/geogebra_applet/main_str.html
@@ -5,8 +5,7 @@
 <title>Geometrika</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Skokov Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content="учебный сервис по геометрии, онлайн помощь, геометрические фигуры, чертежи" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <script src="js/jquery.min.js"></script>
@@ -147,65 +146,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 								<p class="m_5">Благодаря этому сайту ты сможешь выполнить домашнее задание по геометрии, подсмотрев чертёж, который создал твой учитель. Все чертежи пронумерованы и названы, у тебя не возникнет сложностей. Удачи!</p>
 														</div>
-						<div class="col-md-6 about-section-right">
-							<h4>Фигуры<span> </span></h4>
-
-							<div class="client-grids">
-							 <!-- requried-jsfiles-for owl -->
-							<link href="css/owl.carousel.css" rel="stylesheet">
-							    <script src="js/owl.carousel.js"></script>
-							        <script>
-							    $(document).ready(function() {
-							      $("#owl-demo").owlCarousel({
-							        items : 1,
-							        lazyLoad : true,
-							        autoPlay : true,
-							        navigation : false,
-							        navigationText :  false,
-							        pagination : true,
-							      });
-							    });
-							    </script>
-							 <!-- //requried-jsfiles-for owl -->
-							 <!-- start content_slider -->
-						      <div id="owl-demo" class="owl-carousel text-center">
-					                <div class="item">
-					                	<ul>
-											<li><a href="#"><img src="{% static 'images/client-pic1.jpg' %}" class="img-responsive" title="oracle" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic2.jpg' %}" class="img-responsive" title="Sony" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic3.jpg' %}" class="img-responsive" title="Snadisk" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic4.jpg' %}" class="img-responsive" title="mcafee" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic5.jpg' %}" class="img-responsive" title="Netflix" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic6.jpg' %}" class="img-responsive" title="SAP" /></a></li>
-											<div class="clearfix"> </div>
-										</ul>
-					                </div>
-					                 <div class="item">
-					                	<ul>
-											<li><a href="#"><img src="{% static 'images/client-pic1.jpg' %}" class="img-responsive" title="oracle" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic2.jpg' %}" class="img-responsive" title="Sony" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic3.jpg' %}" class="img-responsive" title="Snadisk" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic4.jpg' %}" class="img-responsive" title="mcafee" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic5.jpg' %}" class="img-responsive" title="Netflix" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic6.jpg' %}" class="img-responsive" title="SAP" /></a></li>
-											<div class="clearfix"> </div>
-										</ul>
-					                </div>
-					                 <div class="item">
-					                	<ul>
-											<li><a href="#"><img src="{% static 'images/client-pic1.jpg' %}" class="img-responsive" title="oracle" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic2.jpg' %}" class="img-responsive" title="Sony" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic3.jpg' %}" class="img-responsive" title="Snadisk" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic4.jpg' %}" class="img-responsive" title="mcafee" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic5.jpg' %}" class="img-responsive" title="Netflix" /></a></li>
-											<li><a href="#"><img src="{% static 'images/client-pic6.jpg' %}" class="img-responsive" title="SAP" /></a></li>
-											<div class="clearfix"> </div>
-										</ul>
-					                </div>
-				              </div>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
 					<div class="clearfix"> </div>
 				<!-- about-section-grids -->
 			</div>
@@ -223,7 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="team-member-info">
 							<h5>Клячин В.А.</h5>
-							<p><span> Моделирование и программирование в среде Blender</span><label></label></p>
+							<p><span> Моделирование и программирование в среде Blender</span><label>Заведующий кафедрой</label></p>
 						</div>
 					</div>
 					<div class="team-member">
@@ -286,8 +226,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="{% static 'images/team-member8.jpg' %}"  class="img-responsive" title="name" />
 						</div>
 						<div class="team-member-info">
-							<h5>Clark Kent</h5>
-							<p><span> Bad Debt Manager</span><label>Team Leader</label></p>
+							<h5>Широкий А.А.</h5>
+							<p><span> Администрирование информационных систем</span><label></label></p>
 						</div>
 					</div>
 					<div class="team-member">
@@ -295,8 +235,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="{% static 'images/team-member9.jpg' %}"  class="img-responsive" title="name" />
 						</div>
 						<div class="team-member-info">
-							<h5>Clark Kent</h5>
-							<p><span> Bad Debt Manager</span><label>Team Leader</label></p>
+							<h5>Вихарев С.С.</h5>
+							<p><span> Математический анализ</span><label></label></p>
 						</div>
 					</div>
 					<div class="team-member">
@@ -304,8 +244,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="{% static 'images/team-member10.jpg' %}"  class="img-responsive" title="name" />
 						</div>
 						<div class="team-member-info">
-							<h5>Clark Kent</h5>
-							<p><span> Bad Debt Manager</span><label>Team Leader</label></p>
+							<h5>Лосев А.Г.</h5>
+							<p><span> Директор института математики и информационных технологий</span><label></label></p>
 						</div>
 					</div>
 				</div>
@@ -353,7 +293,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="news-left-grid">
 							<div class="news-left-grid-info news-left-grid-info-left">
-								<h4>Определение цилиндрическая поверхность</h4>
+								<h4>Определение цилиндрической поверхности</h4>
 								<label> </label>
 								<p> Поверхность второго порядка, образуемая движением прямой вдоль кривой так, что прямая постоянно остаётся параллельной своему начальному положению.</p>
 								<span>08.04.2018</span>
