правка поехавшей контактной информации

--- a/geogebra_applet/templates/geogebra_applet/main_str.html
+++ b/geogebra_applet/templates/geogebra_applet/main_str.html
@@ -284,7 +284,7 @@
 								<img src="{% static 'images/news-pic.png' %}"  class="img-responsive" title="name" />
 							</div>
 							<div class="news-left-grid-info">
-								<h4>Определение элипсоида</h4>
+								<h4>Определение эллипсоида</h4>
 								<label> </label>
 								<p>Поверхность в трёхмерном пространстве, полученная деформацией сферы вдоль трёх взаимно перпендикулярных осей.</p>
 								<span>09.03.2018</span>
@@ -310,7 +310,7 @@
 								<img src="{% static 'images/news-pic2.gif' %}"  class="img-responsive" title="name" />
 							</div>
 							<div class="news-right-grid-bottom">
-								<h4>Опеределение конуса</h4>
+								<h4>Определение конуса</h4>
 								<label> </label>
 								<p>Тело в евклидовом пространстве, полученное объединением всех лучей, исходящих из одной точки (вершины конуса) и проходящих через плоскую поверхность.</p>
 								<span>07.05.2018</span>
